# norman_utils_external

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: merge-notification.yaml
norman_base_utils/: __init__.py  file_utils.py  json_pre_serializer.py  json_utils.py  metadata_constants.py  secure_random_bytes_generator.py  secure_random_int_generator.py  singleton.py  streaming_utils.py
norman_utils_external/: date_utils.py  dict_utils.py  dot_syntax_resolver.py  file_utils.py  get_buffer_size.py  http_utils.py  json_pre_serializer.py  json_utils.py  secure_random_bytes_generator.py  secure_random_int_generator.py  singleton.py  streaming_utils.py  uuid_utils.py
tests/: logging_tests.py  transcoding_tests.py
