[build-system]
requires = ["setuptools==67.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "norman-base-utils"
description = "norman base utils common classes"
version = "0.0.1"
authors = [
    {name = "Norman Team", email = "yonatan.alon@norman-ai.com"},
]

requires-python = ">=3.9"
license = {text = "proprietary"}
dependencies = [
    "cryptography==45.0.7"
]

[tools.setuptools]
packages = ["norman_base_utils"]
