[build-system]
requires = ["setuptools==67.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "norman-utils-external"
description = "norman utils common classes"
version = "0.0.1"
authors = [
    {name = "Norman Artificial Intelligence LTD", email = "yonatan.alon@norman-ai.com"},
]

requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "cryptography==45.0.7"
]

[tools.setuptools]
packages = ["norman_utils_external"]
